syntax = "proto3";
option go_package = "next-js-protocol_buf-example/proto";
package proto;

import "user.proto";

message UserCreateResponse {
    User user = 1;
}
